--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -324,13 +324,13 @@ b, strong {
   color: #ffffff;
 }
 .dark-mode .animated-item, .dark-mode .timeline-info small, .dark-mode .social-links .uil {
-  color: #7cbbff;
+  color: #5f92d3;
 }
 .dark-mode .timeline-yr {
-  background: #7cbbff;
+  background: #000000;
 }
 .dark-mode .timeline-yr span {
-  color: #212529;
+  color: #ffffff;
 }
 
 .timeline-wrapper {
@@ -342,15 +342,16 @@ b, strong {
 }
 .timeline-wrapper:before {
   content: "";
-  background: #0074b7;
-  width: 3px;
+  background: #d9effb;
+  width: 2px;
   height: 100%;
   position: absolute;
   left: 38px;
 }
 
 .timeline-yr {
-  background: #0074b7;
+  border: #d9effb solid 2px;
+  background: white;
   border-radius: 100%;
   position: absolute;
   width: 75px;
@@ -359,11 +360,11 @@ b, strong {
   text-align: center;
 }
 .timeline-yr span {
-  color: #ffffff;
+  color: #5f92d3;
   font-size: 16px;
   font-weight: bold;
   display: block;
-  line-height: 75px;
+  line-height: 68px;
 }
 
 .timeline-info {
@@ -393,7 +394,7 @@ b, strong {
   top: 50%;
   transform: translate(0, -50%);
   font-family: 'unicons-line';
-  font-size: 100px;
+  font-size: 60px;
   line-height: normal;
 }
 .owl-carousel .owl-nav .owl-prev:before {
@@ -472,18 +473,29 @@ b, strong {
 
 .social-links{
   display: flex;
+  margin: 10px;
 }
-.social-links .uil {
-  color: #0074B7;
-  font-size: 20px;
+.social-links .uil, .social-links .ai {
+  color: #5f92d3;
+  font-size: 30px;
   display: block;
-  margin: 5px 0;
 }
-.social-links .uil:hover {
+.social-links .ai{
+  line-height: inherit;
+}
+.social-links .ai:before {
+    display: inline-block;
+    text-decoration: inherit;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+}
+
+.social-links .uil:hover, .social-links .ai:hover {
   color: #0074B7;
 }
 .social-links li {
-  padding: 0 15px 0 0;
+  padding: 0 10px 0 0;
 }
 
 @media (min-width: 1270px) {
